FIX:Table bottom has cut green border. Left align the bullet point instructions with the radial buttons.

--- a/html_app/ui/gen/experiment_setup.gss.css
+++ b/html_app/ui/gen/experiment_setup.gss.css
@@ -50,6 +50,7 @@ table.scb_s_experiment_setup_table {
   width: 100%;
   background-color: white;
   margin-bottom: 20px;
+  padding-bottom: 2px;
 }
 .scb_s_experiment_setup_table_body {
   background-color: #edeef2;
